--- a/latte-ec/src/main/res/values/strings.xml
+++ b/latte-ec/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">LatteEC</string>
+    <string name="search">搜索</string>
+    <string name="ic_scan">{fa-qrcode}</string>
+    <string name="ic_message">{fa-bullhorn}</string>
 </resources>
