--- a/wifimanage/src/main/res/values/strings.xml
+++ b/wifimanage/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="update_success">更新成功</string>
     <string name="add_success">新增成功</string>
     <string name="error">请求失败</string>
+    <string name="delete_success">删除成功</string>
 </resources>
