--- a/wifimanage/src/main/res/values/strings.xml
+++ b/wifimanage/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="add_success">新增成功</string>
     <string name="error">请求失败</string>
     <string name="delete_success">删除成功</string>
+    <string name="login_outtime">登录过期</string>
+
 </resources>
