--- a/wifimanage/src/main/res/values/strings.xml
+++ b/wifimanage/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="error">请求失败</string>
     <string name="delete_success">删除成功</string>
     <string name="login_outtime">登录过期</string>
+    <string name="set_attention_success">设置关注人员成功</string>
 
 </resources>
